Changes in Caudium 1.4.x since Caudium 1.4.12
--------------------------------------------
- Fix CGI handling of POST requests when running with Shuffler.
    (Bill Welliver)
- Fix redirects and other responses that don't return data when running in
  SSL mode.
    (Bill Welliver)

Changes in Caudium 1.4.x since Caudium 1.4.8
--------------------------------------------
- New option --with-pike-module in start-caudium allows to specify some more
  Pike modules to load at start time.
   (Bertrand LUPART)
- Actually use Pike's Shuffler as default instead of Caudium's NBIO (backport
  from 1.5).
  Added --with-nbio for forcing NBIO usage instead fo Shuffler.
   (Bertrand LUPART)
- IMPORTANT: The cache storage filename format is different with this 
    release. It is highly recommended that you empty the 
    $PREFIX/caudium_cache directory before starting this version.
    (Bill Welliver)
- Added randomization to cache and storage jobs to prevent surges.
    (Bill Welliver)
- We now store cache item sizes, which should reduce fd usage and
    improve startup times.
    (Bill Welliver)
- Removed a double read on cache items, which should improve performance.
    (Bill Welliver)
- Cache tuning to prevent runaway cache expiration.
    (Bill Welliver)
- Require Pike 7.6.112
   (Bill Welliver)
- Added "None" cache type
   (Bill Welliver)
- Color picker input for wizard should now work properly.
   (Josef Radinger)
- CIF pages using the wizard form now sport a unique identifier in the         
  request so that the page is still up to date, even with browsers that
  caches a lot.
   (Bertrand LUPART)
- Fix C modules to be builded bug reported by Michel Luczak
   (Xavier Beaudouin)
- The CIF can now show if the server is running with Shuffler or nbio.
   (Bertrand LUPART)
- Fixed a bug where empty variables passed in the URL would totally mess up the
  other variables and empty variables in the request id object.
   (Bertrand LUPART)
