@@ -1,5 +1,9 @@
 Changes in Caudium 1.4.x since Caudium 1.4.12
 --------------------------------------------
+- Fix XML encoding of strings in _Caudium.xml_encode_mapping and friends.
+    (Bill Welliver with Bertrand LUPART)
+- Add missing characters to HTML encoding list.
+    (Bill Welliver with Bertrand LUPART)
 - Fix CGI handling of POST requests when running with Shuffler.
     (Bill Welliver)
 - Fix redirects and other responses that don't return data when running in
